Full disclosure on three Vembu vulnerabilities

--- a/csirt.divd.nl/cases/DIVD-2020-00011.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00011.md
@@ -6,8 +6,8 @@ short: Four critical vulnerabilities in Vembu BDR
 author: Frank Breedijk
 lead: Wietse Boonstra
 excerpt: "
-    DIVD Onderzoeker Wietse Boonstra heeft vier critieke kwetsbaarheden gevonden in Vembu BDR, patches zijn beschikbaar	/
-	DIVD researcher Wietse Boonstra hasdiscovered four critical vulnerabilities in Vembu BDR, patches are available.
+    DIVD Onderzoeker Wietse Boonstra heeft vier critieke kwetsbaarheden gevonden in Vembu BDR, patches zijn beschikbaar /
+  DIVD researcher Wietse Boonstra hasdiscovered four critical vulnerabilities in Vembu BDR, patches are available.
 "
 redirect_from:
   - /DIVD-2020-00011/
@@ -181,12 +181,12 @@ versions:
   - XpressSTOR v4.4.0.0
   - ZipData v4.4.0.0
   - Other products or versions of products in this family may be affected too.
-patch_status:	 	Some patches available
+patch_status:   Some patches available
 recommendation: "
-	Update Vembu DBR to at least 4.2.0 update 2 and limit it's exposure (don't expose to public internet)
-	For other products we have not been informed of the availability of patches, it is highly recommended to not expose these products to public internet.
+  Update Vembu DBR to at least 4.2.0 update 2 and limit it's exposure (don't expose to public internet)
+  For other products we have not been informed of the availability of patches, it is highly recommended to not expose these products to public internet.
 "
--workaround:		
+-workaround:    
 ---
 
 ## Samenvatting
@@ -232,6 +232,7 @@ De afgelopen maanden hebben we samengewerkt met Vembu om te zorgen dat er patach
 | 2-5-2021   | Eerste scan naar kwetsbare systemen |
 | 15-5-2021  | Gelimiteerde publicatie van deze kwetsbaarheden |
 | 1-6-2021   | Geplande datum voor full disclosure |
+| 25-8-2021  | Full disclosure van {% cve CVE-2021-26471 %}, {% cve CVE-2021-26472 %} en {% cve CVE-2021-26473 %} |
 
 ## Meer informatie
 
