--- a/csirt.divd.nl/cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00006.md
@@ -35,7 +35,7 @@ We notified SmarterTools Inc. of the following vulnerabilities:
 * [CVE-2021-32234](https://csirt.divd.nl/cves/CVE-2021-32234) - SmarterTools SmarterMail before Build 7776 allows Remote Code Execution.
 
 ## What you can do
-If you run a version of SmarterMail before Build 7776, upgrade to the latest version as soon as possible. To verify if your SmarterMail installation is vulnerable, go within the SmarterMail portal to /about/checkup and verify the version number. If the version number is 100.0.7793 (May 3, 2021) or less and you are running SmarterMail version 16.x, then your vulnerable for these vulnerabilities.
+If you run a version of SmarterMail before 100.0.7803 (May 13, 2021), upgrade to the latest version as soon as possible. To verify the installed version, go within the SmarterMail portal to /about/checkup (http[s]://yourwebmailurl.ext/about/checkup) and verify the version number. If the version number is 16.x or before 100.0.7803 (May 13, 2021) then you are vulnerable.
 
 ## What we are doing
 We are processing the list of vulnerable SmarterMail servers.
