update casefile on CVE-2022-26134

--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -16,7 +16,7 @@ product:
 versions:
 - ">= 7.4.0"
 - Older versions are potentially vulnerable too.
-recommendation: Currently no patches are available. It is recommended to restrict access to Confluence or to disable it.
+recommendation: Patches are available.
 patch_status: Patch available
 workaround: If access cannot be blocked or Confluence taken offline a WAF that blocks requests containing `${` may provide additional protection
 status: Open
@@ -44,6 +44,15 @@ timeline:
 - start: 2022-06-04
   end:
   event: "Notifications being sent to about 15k vulnerable instances"
+- start: 2022-06-06
+  end:
+  event: "Data concerning the etherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)" 
+- start: 2022-06-06
+  end:
+  event: "1148 notifications sent out to vulnerable owners"
+- start: 2022-06-07
+  end: 
+  event: "Another 834 vulnerable instances identified and informed"
 
 ips: 0
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
