[DIVD-2022-00053] Added Steven as a researcher and updated the vulnerabile versions to fully include both CVE's

--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -7,19 +7,23 @@ status: Open
 excerpt: DIVD is researching vulnerable publicly exposed H2 Consoles
 researchers:
 - Martin van Wingerden
+- Steven Sparks
 cves: 
 - CVE-2021-42392
 - CVE-2022-23221
 product: H2 Web Console
-versions: 1.1.100-2.0.204
+versions: 1.1.100-2.1.210
 recommendation: "Update and do not expose the console to untrusted users."
 workaround: Do not expose the console to untrusted users.
 start: 2022-09-09
 end:
 timeline:
-- start: 2022-01-05
+- start: 2022-01-04
   end:
-  event: "H2 reported about the vulnerability."
+  event: "H2 released version 2.0.206 and reported about CVE-2021-42392"
+- start: 2022-01-17
+  end:
+  event: "H2 released version 2.1.210 and reported about CVE-2022-23221"
 - start: 2022-09-09
   end:
   event:  DIVD starts scanning for vulnerabilities.
@@ -40,8 +44,9 @@ We are scanning the internet for vulnerable H2 Console servers, and will notify 
 {% include timeline.html %}
 
 ## More information
-* {% cve CVE-2022-23221 %}
-* [H2 Database Console Remote Code Execution](https://packetstormsecurity.com/files/165676/H2-Database-Console-Remote-Code-Execution.html)
+
 * {% cve CVE-2021-42392 %}
 * [The JNDI Strikes Back – Unauthenticated RCE in H2 Database Console](https://jfrog.com/blog/the-jndi-strikes-back-unauthenticated-rce-in-h2-database-console/)
+* {% cve CVE-2022-23221 %}
+* [H2 Database Console Remote Code Execution](https://packetstormsecurity.com/files/165676/H2-Database-Console-Remote-Code-Execution.html)
 
