Update case with in the wild exploitation information

--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -46,6 +46,9 @@ timeline:
 - start: 2022-10-26
   end:
   event: "First mail run completed."
+- start: 2022-11-09
+  end:
+  event: "Vulnerability exploited in the wild."
 
 ---
 
