Zoho RCE 2023-00004 update

--- a/_cases/2023/DIVD-2023-00004.md
+++ b/_cases/2023/DIVD-2023-00004.md
@@ -48,9 +48,12 @@ timeline:
 - start: 2023-01-22
   end: 
   event: "DIVD identifies vulnerable parties."
-- start: 2023-11-24
+- start: 2023-01-24
   end:
   event: "DIVD sends first round of notifications."
+- start: 2023-02-14
+  end:
+  event: "DIVD conducts second scan and prepares second notification round."
 ---
 
 ## Summary
