Updated case DIVD-2023-00034 to reflect public availability of poc for rce

--- a/_cases/2023/DIVD-2023-00034.md
+++ b/_cases/2023/DIVD-2023-00034.md
@@ -30,7 +30,8 @@ timeline:
 ---
 ## Summary
 
-A vulnerability has been discovered in Ivanti Sentry, formerly MobileIron Sentry. The vulnerability impacts all supported versions up until version 9.18. If exploited, this vulnerability enables an unauthenticated attacker to access sensitive API endpoints that are used to configure Ivanti Sentry on the administrator portal. The risk can be mitigated by limiting access to port 8443 and installing the provided RPM scripts in the Security Advisory. This vulnerability is actively being exploited and therefore mitigation should be done as soon as possible.
+A vulnerability has been discovered in Ivanti Sentry, formerly MobileIron Sentry. The vulnerability impacts all supported versions up until version 9.18. If exploited, this vulnerability enables an unauthenticated attacker to access sensitive API endpoints that are used to configure Ivanti Sentry on the administrator portal. There are also proof-of-concepts available that leverage the exposed API endpoints that lead to remote code execution (RCE) on the server. The risk can be mitigated by limiting access to port 8443 and installing the provided RPM scripts in the Security Advisory. This vulnerability is actively being exploited and therefore mitigation should be done as soon as possible.
+
 
 ## Recommendations
 
@@ -49,3 +50,4 @@ DIVD is scanning for vulnerable systems. Owners of such systems will receive a n
 
 * [Ivanti Security Advisory](https://www.ivanti.com/blog/cve-2023-38035-vulnerability-affecting-ivanti-sentry)
 * [BleepingComputer article](https://www.bleepingcomputer.com/news/security/ivanti-warns-of-new-actively-exploited-mobileiron-zero-day-bug/)
+* [Horizon3 analysis on CVE usage for RCE](https://www.horizon3.ai/ivanti-sentry-authentication-bypass-cve-2023-38035-deep-dive/)
