--- a/_cases/2024/DIVD-2024-00021.md
+++ b/_cases/2024/DIVD-2024-00021.md
@@ -32,6 +32,12 @@ timeline:
 - start: 2024-05-31
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
+- start: 2024-06-20
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-06-20
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
 
 # ips: 0
 
