--- a/_cases/2024/DIVD-2024-00029.md
+++ b/_cases/2024/DIVD-2024-00029.md
@@ -33,6 +33,9 @@ timeline:
   event: "DIVD starts scanning the internet for vulnerable instances."
 - start: 2024-07-09
   end:
+  event: "DIVD performed a rescan to retrieve the latest vulnerable instances"
+- start: 2024-07-09
+  end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
 ---
 
