fix cve-2023-22582 danfoss

--- a/_cases/2023/DIVD-2023-00021.md
+++ b/_cases/2023/DIVD-2023-00021.md
@@ -10,6 +10,7 @@ researchers:
 - Stan Plasmeijer (HackDefense)
 - Max van der Horst
 cves:
+- CVE-2023-22582
 - CVE-2023-22583
 - CVE-2023-22584
 - CVE-2023-22585
@@ -69,6 +70,7 @@ After completing the CVE registration, DIVD will start scanning for vulnerable i
 
 ## More information
 
+* {% cve CVE-2023-22582 %}
 * {% cve CVE-2023-22583 %}
 * {% cve CVE-2023-22584 %}
 * {% cve CVE-2023-22585 %}
