--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -8,6 +8,7 @@ researchers:
 - Koen Schagen
 - Stan Plasmeijer
 cves:
+- CVE-2024-6342
 - CVE-2024-29972
 - CVE-2024-29973
 - CVE-2024-29974
@@ -17,8 +18,8 @@ product:
 - Zyxel NAS326
 - Zyxel NAS542
 versions: 
-- NAS326 - V5.21(AAZF.16)C0 and earlier
-- NAS542 - V5.21(ABAG.13)C0 and earlier
+- NAS326 - V5.21(AAZF.18)C0 and earlier
+- NAS542 - V5.21(ABAG.15)C0 and earlier
 recommendation: "If your Zyxel NAS device is running a vulnerable firmware/software version, please update it to the latest version."
 patch_status: Released
 status : Open
@@ -40,6 +41,12 @@ timeline:
 - start: 2024-04-07
   end:
   event: "DIVD starts notifying network owners with a vulnerable device in their network."
+- start: 2024-09-10
+  end:
+  event: "Zyxel annouched another security advisory with an additional command injection vulnerability (CVE-2024-6342) and based on that we updated the suggested firmware version in this case "
+- start: 2024-09-10
+  end:
+  event: "DIVD starts researching into a new fingerprint that also includes CVE-2024-6342"
 
 #ips: 0
 
@@ -49,12 +56,17 @@ Several vulnerabilities have been found in Zyxel NAS devices NAS326 and NAS542. 
 
 At DIVD, we will primarily focus on CVE-2024-29973 to identify vulnerable devices. If CVE-2024-29973 is present, it indicates that other CVEs are likely present as well since they are all addressed in the same firmware update.
 
+
+!!NEW UPDATE!!
+
+Another CVE (CVE-2024-6342) was found in the suggested firmware version of this case so we updated the case to the lastest download links as outlined in this new [Zyxel Security Advisory 10-09-2024](https://www.zyxel.com/global/en/support/security-advisories/zyxel-security-advisory-for-os-command-injection-vulnerability-in-nas-products-09-10-2024)
+
 ## Recommendations
 
 Zyxel advises upgrading to the latest firmware version to benefit from the vulnerability fixes. On the versions below, the mentioned vulnerabilities have been fixed:
 
-- NAS326 -> [V5.21(AAZF.17)C0](https://download.zyxel.com/NAS326/firmware/NAS326_V5.21(AAZF.17)C0.zip) (released May 10th 2024) 
-- NAS542 -> [V5.21(ABAG.14)C0](https://download.zyxel.com/NAS542/firmware/NAS542_V5.21(ABAG.14)C0.zip) (released May 10th 2024) 
+- NAS326 -> [V5.21(AAZF.18)Hotfix01](https://fwstore-zsdn-cloud-zyxel-com.s3.us-east-1.amazonaws.com/Home%20product/NAS/NAS326/521AAZF18C0Hotfix01.bin) (released end-of Aug 2024) 
+- NAS542 -> [V5.21(ABAG.15)Hotfix01](https://fwstore-zsdn-cloud-zyxel-com.s3.us-east-1.amazonaws.com/Home%20product/NAS/NAS542/521ABAG15C0Hotfix01.bin) (released May 10th 2024) 
 
 DIVD recommends that you do not have this device reachable from the internet unless it is absolutely necessary. If this is the case, a firewall rule should be placed in front of the Zyxel NAS device so that it can only be accessed from trusted IP addresses so attackers will have no access.
 
@@ -65,11 +77,13 @@ DIVD is currently working to identify and notify vulnerable parties. We do this 
 {% include timeline.html %}
 
 ## More information
-
+CVE-2024-6342
+* {% cve CVE-2024-6342 %}
 * {% cve CVE-2024-29972 %}
 * {% cve CVE-2024-29973 %}
 * {% cve CVE-2024-29974 %}
 * {% cve CVE-2024-29975 %}
 * {% cve CVE-2024-29976 %}
 * [Zyxel Security Advisory 06-04-2024](https://www.zyxel.com/global/en/support/security-advisories/zyxel-security-advisory-for-multiple-vulnerabilities-in-nas-products-06-04-2024)
+* [Zyxel Security Advisory 10-09-2024](https://www.zyxel.com/global/en/support/security-advisories/zyxel-security-advisory-for-os-command-injection-vulnerability-in-nas-products-09-10-2024)
 * [Outpost24 research-and-threat-intel blog](https://outpost24.com/blog/zyxel-nas-critical-vulnerabilities/)
