First scan ran and notified network owners with possible vulnerable instance

--- a/_cases/2024/DIVD-2024-00040.md
+++ b/_cases/2024/DIVD-2024-00040.md
@@ -31,7 +31,13 @@ timeline:
   event: "DIVD finds fingerprint, preparing to scan."
 - start: 2024-10-08
   end:
-  event: "Case opened and starting first scan."
+  event: "Case opened, first version of this casefile"
+- start: 2024-10-08
+  end:
+  event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-10-09
+  end:
+  event: "DIVD starts notifying network owners with a possible vulnerable instance in their network"
 ---
 
 ## Summary
