--- a/_cases/2025/DIVD-2025-00040.md
+++ b/_cases/2025/DIVD-2025-00040.md
@@ -37,6 +37,11 @@ timeline:
 - start: 2025-10-06
   end:
   event: "Oracle published security advisory."
+- start: 2025-10-07
+  end: "find vulnerable instances"
+- start: 2025-10-08
+  end:
+  event: "Start notifying vulnerable instances."
 
 ---
 
